# todo

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
todo/: manage.py
todo/templates/: base.html
todo/todo/: settings.py  urls.py
todo/todo_list/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
todo/todo_list/migrations/: 0001_initial.py  0002_initial.py
todo/todo_list/templates/todo_list/: create_task.html  task.html  tasks.html
todo/user/: tests.py  urls.py  views.py
todo/user/migrations/: 0001_initial.py
todo/user/templates/user/: login.html  register.html
